<resources>
    <string name="app_name">TestApp2</string>
    <string name="button">Button</string>
    <string name="answer">Тут ответы</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="first">Первая и четвертая</string>
    <string name="_2and3">Вторая и третья</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="textview">TextView</string>
    <string name="task">Задачки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_task">Первое задание</string>
    <string name="second_task">Второе задание</string>
    <string name="example">Пример</string>
    <string name="name_field">Имя: </string>
    <string name="email">Email:</string>
    <string name="fourth_task">Четвертое задание</string>
</resources>